k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: indigoapp.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: indigo-website
            port:
              number: 80
